--- a/src/pages/projects/dev-ops.astro
+++ b/src/pages/projects/dev-ops.astro
@@ -29,8 +29,8 @@ const project = await getEntry('projects', 'dev-ops');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/code.jpg')}
-      alt="CI/CD Pipeline Development"
+      src={import('../../assets/devops.jpg')}
+      alt="DevOps automation and CI/CD pipelines"
       width={1920}
       height={1200}
     />
