--- a/src/pages/projects/other-stuff.astro
+++ b/src/pages/projects/other-stuff.astro
@@ -31,8 +31,8 @@ const project = await getEntry('projects', 'other-stuff');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/code.jpg')}
-      alt="Modern Framework Development"
+      src={import('../../assets/other_stuff.jpg')}
+      alt="Modern Technology Integration and Cloud Services"
       width={1920}
       height={1200}
     />
