--- a/src/pages/projects/people-management.astro
+++ b/src/pages/projects/people-management.astro
@@ -33,7 +33,7 @@ const project = await getEntry('projects', 'people-management');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/library.jpg')}
+      src={import('../../assets/people_management.jpg')}
       alt="Team Leadership and Management"
       width={1920}
       height={1200}
