--- a/src/pages/projects/php-laravel.astro
+++ b/src/pages/projects/php-laravel.astro
@@ -31,7 +31,7 @@ const project = await getEntry('projects', 'php-laravel');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/code.jpg')}
+      src={import('../../assets/php_laravel.jpg')}
       alt="PHP Laravel Development"
       width={1920}
       height={1200}
