--- a/src/pages/projects/testing.astro
+++ b/src/pages/projects/testing.astro
@@ -29,8 +29,8 @@ const project = await getEntry('projects', 'testing');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/code.jpg')}
-      alt="Test Automation Development"
+      src={import('../../assets/testing.jpg')}
+      alt="Software Testing and Quality Assurance"
       width={1920}
       height={1200}
     />
