--- a/src/pages/projects/wordpress.astro
+++ b/src/pages/projects/wordpress.astro
@@ -32,8 +32,8 @@ const project = await getEntry('projects', 'wordpress');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/code.jpg')}
-      alt="WordPress Development"
+      src={import('../../assets/wordpress.jpg')}
+      alt="WordPress and WooCommerce Development"
       width={1920}
       height={1200}
     />
