--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -187,7 +187,7 @@ import AboutLine from '../components/AboutLine.astro';
     <AboutLine
       class="about-line"
       title="Marinette Marine"
-      description="Program Cost Analyst"
+      description="Program Cost Analyst II"
       date="November 2016 - April 2018"
       location="Marinette, WI"
     />
