--- a/src/pages/projects/php-laravel.astro
+++ b/src/pages/projects/php-laravel.astro
@@ -99,7 +99,7 @@ const project = await getEntry('projects', 'php-laravel');
 
     <CustomImage
       slot="col2"
-      src={import('../../assets/projects/hi-fiber/hi-fiber-cad.jpg')}
+      src={import('../../assets/projects/laravelwebp.webp')}
       alt="Code Quality and Testing"
       width={1920}
       height={1200}
