--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -142,7 +142,7 @@ import AboutLine from '../components/AboutLine.astro';
       </p>
 
       <p>
-        In my current role, I split my time between leading teams and addressing complex technical challenges.
+        My favorite part of my job is split my time between leading teams and addressing complex technical challenges.
         I've successfully revamped hiring processes, implemented career roadmaps, and supported team members' growth
         while actively participating in Scrum ceremonies like standups, sprint planning, and retrospectives.
       </p>
@@ -241,23 +241,39 @@ import AboutLine from '../components/AboutLine.astro';
       location="Stevens Point, WI"
     />
 
-<!--
-    <h3>Awards</h3>
-    <AboutLine
-      class="about-line"
-      title="SN Genova Design Innovation Award"
-      description="Winner of Special Innovation Award"
-      date="Oct 2020"
-    /> -->
 
-<!--
-    <h3>Exhibitions</h3>
+    <h3>Side Projects</h3>
     <AboutLine
       class="about-line"
-      title="MakerFaire 2016"
-      description="ENI Solar Park"
-      date="Rome IT, Oct 2016"
-    /> -->
+      title="Fergfo.com"
+      titleUrl="https://fergfo.com"
+      description="Personal website built with Astro, to evaluate Put Options.  Experiements with a lot of Caching Strategies."
+      date="2025"
+    />
+    <AboutLine
+      class="about-line"
+      title="Travel Ferguson"
+      titleUrl="https://travelferguson.com"
+      description="Side Project for planning a trip to New Zealand.  Allows users to create an account, and organize their own travel itineraries.  Using Supabase for authentication and database."
+      date="2025"
+    />
+    <AboutLine
+      class="about-line"
+      title="Soccer Highlights"
+      titleUrl="https://mollyferguson.info"
+      description="Side Project for my daughter, Molly.  Uses Hygraph for content, and Astro for the website.  Allows to upload photos, and videos mainly for soccer highlights.  Uses Cloudflare for caching and CDN."
+      date="2025"
+    />
+    <AboutLine
+      class="about-line"
+      title="Soccer Highlights"
+      titleUrl="https://micah-ferguson.com/"
+      description={`Side Project for my son, Micah. Uses Hygraph for content, and Astro for the website. 
+        Allows to upload photos, and videos mainly for fun. The space theme is pretty fun. 
+        Uses Cloudflare for caching and CDN. Image generation and optimization.`}
+      date="2025"
+    />
+
 
   </div>
 </AboutLayout>
